Created unit tests for EmployeeService methods